# apple-health-data

./: .env  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .serverless-wsgi  .sqlfluff  .sqlfluffignore  2022-06-26.ics  2023-01-18T09:39:59.parquet  2023-01-26T06:11:46.parquet  2025-04-24T21:43:08.238147.json  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  ap.ipynb  apple-health-calendar.csv  apple-health-calendar.ics  apple-health.ipynb  apple-health.py  auto-apple-health.sh  autosleep.py  build.sh  combine_parquets.ipynb  common_functions.py  conf.py  config.yml  copy_to_public_bucket.py  create-cal.py  create_calendar.py  dashboard.py  df_event.csv  download.py  healthlake-calendar.py  healthlake.ipynb  healthlake.py  last_processed_date.txt  models.py  (+12 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: issue_request.md
.github/workflows/: calendar.yaml  deploy-web.yml  export-sheet.yml  infra.yaml  refresh-data.yml  schedule-trigger.yml  schedule-triggered-sync.yml  sync-s3-data.yml  test.yaml
archive/: create_calendar.py  healthlake.py  models.py  parse_parquet.py
archive/tests/: test_healthlake.py
calendar/: apple-health-calendar.ics  conf.py  event_formats.yaml  lambda.py  models.py  sample_event.json
config/: column_mapping.yaml  event_types.json  events.yaml  gsheet_export.yaml  mapping.json  units.json  user_config.json
dagster/: Dockerfile  README.md  dagster.yaml  pyproject.toml  run_dagster.sh  setup.sh  workspace.yaml
dagster/apple_health_pipeline/: __init__.py  groups.py  schedules.py
dagster/apple_health_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dagster/apple_health_pipeline/assets/: __init__.py  calendar.py  dbt.py  ingestion.py
dagster/apple_health_pipeline/jobs/: __init__.py
dagster/apple_health_pipeline/resources/: __init__.py
dashboard/: 0_🏠_Home.py  __init__.py  app.py  conf.py  duckdb.db  graphing.py  helpers.py  kpi.py  kpi_config.yaml  main.py  powerlifting_functions.py  questions.yaml  reflections.py
dashboard/pages/: 1_Exercises.py  1_🏋️_Exercises.py  2_Mental_Health.py  2_Sleep.py  2_😴_Mental_Health.py  3_Nutrition.py  3_🍽️_Nutrition.py  4_Reflection.py  4_📝_Reflection.py
data/: latest_data.parquet
dbt/: Dockerfile  dbt_lambda.py  dbt_project.yml  lambda.py  profiles.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/tests/: test_fct_e1rm_rolling_total_matches_components.sql  test_fct_personal_bests_chronology_and_counts.sql  test_fct_training_readiness_scores_in_range.sql  test_fct_workout_sets_volume_matches_inputs.sql  test_stg_health_metrics_has_core_metrics.sql
docs/: README.md
docs/plans/: 2026-03-22-hrv-rhr-trend.md  2026-03-22-hydration-fiber.md  2026-03-22-training-readiness.md  2026-03-22-vo2-max-trend.md  2026-03-22-walking-asymmetry.md
events/apple-health/: HealthAutoExport-2022-12-25-2023-03-25.json
flask/: .gitignore  build.sh  conf.py  create_calendar.py  healthlake.py  parse_parquet.py  requirements.txt  s3-trigger-parquet-event.json  serverless.yml
flask/config/: latest_data.sql
flask/healthlake/: 2022-09-16T05:18:49.175751.json  2023-01-17T07-20-05.910234.json  s3-trigger-event.json
healthlake/: healthlake.py
infra/: .terraform.lock.hcl  README.md  dbt.tf  deploy-ingest-lambda.sh  deploy-trigger-lambda.sh  deploy-web.sh  iam.tf  lambda.tf  outputs.tf  s3_bucket.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/lambda/: ingest_health_data.py  trigger_refresh.py
ingest/: Dockerfile  ingest_lambda.py  lambda.py
ingest/events/: curl.sh
ingest/exercise/: conf.py  hevy.py  openpowerlifting.py  utils.py  workout_entiies.py
lambda/: Dockerfile  dbt_lambda.py  main.tf  outputs.tf
lambda/api_health_data/: dbt_project.yml
layer-pandas-numpy/: .gitignore  requirements.txt  serverless.yml
notebooks/: combine_parquets.ipynb  create_calendar.ipynb  parse_as_parquet.ipynb
outputs/: apple-health-calendar.csv  apple-health-calendar.ics
outputs/parquets/: 2023-01-18T09:39:59.parquet
outputs/transformations/: ahc.csv  raw.csv
ralph/: prd.json  progress.txt
scripts/: calendar.sh  dashboard.sh  deploy.sh  duckdb_shell.py  generate_streamlit_secrets.py  hevy.sh  infra.sh  rebuild.sh  run-pipelines.sh  run.sh  run_pipeline.sh  setup.sh  strava-auth.sh  test.sh  wipe.sh
source/: 2023-02-01T06:45:05.339463.json  2023-02-01T06:45:05.parquet  s3-trigger-event.json
source/apple-health/: 2023-01-16T06-45-42.664175.json  HealthAutoExport-2023-01-16-2023-01-16.json
source/syncs/: 2023-01-18T09:39:59.479199.json  2023-01-26T06:11:46.119648.json
source/trigger-events/: s3-trigger-json-event.json  s3-trigger-parquet-event.json
src/: create_calendar.py  parse_parquet.py
src/apple_health_calendar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dashboard/: Home.py  __init__.py  app.py  components.py  config.py  data.py  export_web.py
src/pipelines/: __init__.py  config.py  openpowerlifting.py
src/tests/: test_healthlake.py
tests/: test_apple_health_source.py  test_dashboard_data.py  test_gsheet_block.py  test_gsheet_config.py  test_gsheet_daily.py  test_gsheet_data.py  test_gsheet_export.py  test_gsheet_model.py  test_gsheet_sheet.py  test_healthlake.py  test_helpers.py  test_hevy_source.py  test_ingest_health_data.py  test_run.py  test_trigger_refresh.py
transforms/: .user.yml  Dockerfile  dbt_project.yml  lambda.py  profiles.yml  raw.json
transforms/events/: 1741611733.json
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
(+110 files in other folders)
