[project]
name = "apple-health-data"
version = "0.1.0"
description = "Extract Hevy workout data to S3 and transform with dbt"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "dlt[filesystem,parquet,deltalake]==1.28.1",
    "s3fs==2026.6.0",
    "pyarrow==24.0.0",
    "polars==1.41.2",
    "dbt-core==1.11.11",
    "dbt-duckdb==1.10.1",
    "python-dotenv==1.2.2",
    "streamlit==1.58.0",
    "altair==6.2.1",
    "beautifulsoup4==4.15.0",
    "requests==2.34.2",
    "duckdb==1.5.4",
    "gspread==6.2.1",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines", "src/dashboard", "src/exports"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Streamlit pages require st.set_page_config() before other imports
"src/dashboard/pages/*.py" = ["E402"]
"src/dashboard/Home.py" = ["E402"]

# =============================================================================
# Dashboard Configuration (non-sensitive values)
# =============================================================================
[tool.dashboard]
# S3 bucket and prefix for transformed data
s3_bucket_name = "api-health-data-ntonthat"
s3_transformed_prefix = "transformed"
aws_region = "ap-southeast-2"
timezone = "Australia/Melbourne"

# User info
user_name = "Nam Tonthat"
openpowerlifting_url = "https://www.openpowerlifting.org/u/namtonthat"

[tool.dashboard.goals]
sleep_hours = 7.0
sleep_deep_hours = 1.5
sleep_rem_hours = 1.5
sleep_light_hours = 3.5
protein_g = 165.0
carbs_g = 250.0
fat_g = 60.0
weight_kg = 69.0
resting_hr_bpm = 55.0
hrv_ms = 65.0
vo2_max = 49.0
steps = 10000
meditation_minutes = 10
lifts_per_week = 4.0

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "sqlfluff==4.2.2",
    "sqlfluff-templater-dbt==4.2.2",
    "pre-commit==4.6.0",
]
